--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-TWITTER_BEARER_TOKEN=example
+TWITTER_BEARER_TOKEN=AAAAAAAAAAAAAAAAAAAAACm7xAEAAAAAjqco7XgA%2FLtcbYAcljHF2fMT7sI%3DuQiDiYdyTMNyR8RSXmKE0a2Tx4tYlVIyyEFTbQrfLRaUmqp7Ml
+YOUTUBE_API_KEY=AIzaSyCcq9LEtjxZOTCLCnakR9xlR2EBLrUwWyY
+REDDIT_CLIENT_ID=_sN5zpt9dk3BAC4gxQ_WVg
+REDDIT_CLIENT_SECRET=iwJKlecO_M2_IKu8CnOJmJLs-26pfQ
